<resources>
    <string name="app_name">Rick And Morty</string>
    <string name="location">Location: </string>
    <string name="gender">Gender: </string>
    <string name="species">Species: </string>
    <string name="status">Status: </string>
    <string name="name">Name: </string>
    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>
    <string name="_1">1</string>
    <string name="choose_page">Choose page</string>
    <string name="id">Id: </string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <string name="searching_characters">Searching Characters</string>
</resources>